tests/snapshots/gateway/studio/repo_index_status_endpoint_modelica_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "active": 0,
  "checking": 0,
  "failed": 0,
  "indexing": 0,
  "maxConcurrency": 15,
  "queued": 1,
  "ready": 0,
  "repos": [
    {
      "attemptCount": 0,
      "phase": "queued",
      "repoId": "modelica-gateway-index-status",
      "updatedAt": "[updated-at]"
    }
  ],
  "studioBootstrapBackgroundIndexingDeferredActivationAt": null,
  "studioBootstrapBackgroundIndexingDeferredActivationObserved": false,
  "studioBootstrapBackgroundIndexingDeferredActivationSource": null,
  "studioBootstrapBackgroundIndexingEnabled": false,
  "studioBootstrapBackgroundIndexingMode": "deferred",
  "syncConcurrencyLimit": 1,
  "syncing": 0,
  "targetConcurrency": 1,
  "total": 1,
  "unsupported": 0
}
