tests/snapshots/gateway/studio/repo_projected_gap_report_endpoint_modelica_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "gaps": [],
  "repo_id": "modelica-gateway-projected-gap-report",
  "summary": {
    "by_kind": [],
    "gap_count": 0,
    "page_count": 11
  }
}
